[UPDATE] "lista spesa" done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lista della spesa con ciclo while</title>
 </head>
 <body>
+    <ul id="list"></ul>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
